--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: PageKey Solutions - Blog
 description: > # this means to ignore newlines until "baseurl:"
   A simple blog about programming.
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "http://www.pagekeysolutions.com/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://blog.pagekeysolutions.com/" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: _stephengrice
 github_username:  pagekeysolutions
 
