Change old PageKey references to Line by Line Code
RIP PageKey Solutions!

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 # Author details.
 stephengrice:
     name: Stephen Grice
-    email: steve@pagekeysolutions.com
-    web: http://twitter.com/_stephengrice
+    email: steve@linebylinecode.com
+    web: http://linebylinecode.com/
