--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: PageKey Solutions - Blog
+title: Line by LIne Code
 description: > # this means to ignore newlines until "baseurl:"
   A simple blog about programming.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://blog.pagekeysolutions.com/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://linebyline.com/" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: _stephengrice
-github_username:  pagekeysolutions
+github_username:  stephengrice
 
 # Build settings
 markdown: kramdown
@@ -30,6 +30,6 @@ exclude:
   - Gemfile
   - Gemfile.lock
 
-keywords: software engineering, programming, web design, development, freelance developer, jekyll, PageKey Solutions, PageKeySolutions, pks, Stephen Grice, stephengrice, _stephengrice, freelance
+keywords: software engineering, programming, web design, development, freelance developer, jekyll, PageKey Solutions, PageKeySolutions, pks, Stephen Grice, stephengrice, _stephengrice, freelance, line by line code, line by line, code
 
 permalink: /:year/:month/:day/:title
