--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Line by LIne Code
+title: Line by Line Code
 description: > # this means to ignore newlines until "baseurl:"
   A simple blog about programming.
 baseurl: "/" # the subpath of your site, e.g. /blog
@@ -24,7 +24,7 @@ github_username:  stephengrice
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
 exclude:
   - Gemfile
