Switch logo and links back to PageKey Solutions

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 # Author details.
 stephengrice:
-    name: Stephen Grice
-    email: steve@linebylinecode.com
-    web: http://linebylinecode.com/
+    name: Steve Grice
+    email: pagekeysolutions@gmail.com
+    web: http://pagekeysolutions.com/
