--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Line by Line Code
+title: PageKey Solutions
 description: > # this means to ignore newlines until "baseurl:"
   A simple blog about programming.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://linebylinecode.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://blog.pagekeysolutions.com/" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: _stephengrice
 github_username:  stephengrice
 
