--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "docusaurus-lunr-search": "^2.1.15",
+    "hast-util-is-element": "^1.1.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "rehype-katex": "^5.0.0",
+    "remark-math": "^3.0.1"
   },
   "browserslist": {
     "production": [
