--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 steve:
   name: Steve Grice
-  title: Researcher, Developer
+  title: Author
   url: https://github.com/stephengrice
   image_url: https://github.com/stephengrice.png
