--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.15",
+    "@docusaurus/plugin-client-redirects": "2.0.0-beta.15",
     "@docusaurus/plugin-google-gtag": "^2.0.0-beta.16",
     "@docusaurus/preset-classic": "2.0.0-beta.15",
     "@mdx-js/react": "^1.6.21",
@@ -24,6 +25,7 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "rehype-katex": "^5.0.0",
     "remark-math": "^3.0.1"
   },
