--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "wilr/1-react-native-basics.md",
+            "file": "boom/devlog-5.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "wilr/1-react-native-basics.md",
+                "file": "boom/devlog-5.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,8 +89,9 @@
   },
   "active": "163d399073735459",
   "lastOpenFiles": [
-    "wilr/1-react-native-basics.md",
+    "boom/devlog-5.md",
     "misc/docker-101.md",
+    "wilr/1-react-native-basics.md",
     "_templates_/post.md",
     "misc/react-cra.md",
     "misc/duobot.md",
