--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ es/mkdocs.yml
 es/docs/assets/favicon.ico
 es/docs/assets/logo.png
 es/docs/.authors.yml
+en/docs/blog/.authors.yml
+es/docs/blog/.authors.yml
