--- a/common/mkdocs.yml
+++ b/common/mkdocs.yml
@@ -11,13 +11,14 @@ theme:
     accent: deep orange
 plugins:
   - blog:
-      blog_dir: .
+      blog_dir: blog
       post_url_format: "{slug}"
   - search
   - tags:
       tags_file: tags.md
 nav:
   - index.md
+  - blog/index.md
   - tags.md
 markdown_extensions:
   - pymdownx.highlight:
