--- a/common/mkdocs.yml
+++ b/common/mkdocs.yml
@@ -13,6 +13,7 @@ plugins:
   - blog:
       blog_dir: blog
       post_url_format: "{slug}"
+  - mkdocs-video
   - search
   - tags:
       tags_file: tags.md
