--- a/common/mkdocs.yml
+++ b/common/mkdocs.yml
@@ -12,17 +12,16 @@ theme:
 plugins:
   - blog:
       archive: true
-      blog_dir: blog
+      blog_dir: .
       categories: true
       post_url_format: "{slug}"
   - mkdocs-video
   - search
   - tags:
-      tags_file: blog/tags.md
+      tags_file: tags.md
 nav:
   - index.md
-  - blog/index.md
-  - blog/tags.md
+  - tags.md
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
