--- a/common/mkdocs.yml
+++ b/common/mkdocs.yml
@@ -30,6 +30,8 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  - pymdownx.arithmatex:
+      generic: true
 validation:
   absolute_links: ignore
 copyright: Copyright &copy; 2017 - <script>document.write(new Date().getFullYear())</script> PageKey Solutions, LLC
@@ -44,3 +46,7 @@ extra:
     - name: Español
       link: /es/
       lang: es
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
