--- a/common/docs/.authors.yml
+++ b/common/docs/.authors.yml
@@ -3,3 +3,7 @@ authors:
     name: Steve Grice
     description: Techie
     avatar: https://github.com/stephengrice.png
+  eric:
+    name: Eric Eaton
+    description: Techie
+    avatar: https://github.com/ericthomaseaton.png
