Add Spanish posts from old blog

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,17 @@ es/mkdocs.yml
 es/docs/assets/favicon.ico
 es/docs/assets/logo.png
 es/docs/.authors.yml
-en/docs/blog/.authors.yml
-es/docs/blog/.authors.yml
-en/src/YouTubePlayer.html
+es/docs/posts/2023/pkos-21/pata_vs_sata.png
+es/docs/posts/2023/pkos-21/ide_class_code.png
+es/docs/posts/2023/pkos-21/example_pci_card_spec_snippet.png
+es/docs/posts/2023/pkos-21/lspci_output_early.png
+es/docs/posts/2023/pkos-21/lspci_output.png
+es/docs/posts/2023/pkos-21/PCI_Configuration_Space.png
+es/docs/posts/2023/pkos-21/pcilookup.png
+en/docs/posts/2023/pkos-21/pata_vs_sata.png
+en/docs/posts/2023/pkos-21/ide_class_code.png
+en/docs/posts/2023/pkos-21/example_pci_card_spec_snippet.png
+en/docs/posts/2023/pkos-21/lspci_output_early.png
+en/docs/posts/2023/pkos-21/lspci_output.png
+en/docs/posts/2023/pkos-21/PCI_Configuration_Space.png
+en/docs/posts/2023/pkos-21/pcilookup.png
