Add posts for 9 dias de codigo

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ en/docs/posts/2023/pkos-21/lspci_output_early.png
 en/docs/posts/2023/pkos-21/lspci_output.png
 en/docs/posts/2023/pkos-21/PCI_Configuration_Space.png
 en/docs/posts/2023/pkos-21/pcilookup.png
+es/javascripts/mathjax.js
