--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ en/docs/posts/2023/pkos-21/lspci_output.png
 en/docs/posts/2023/pkos-21/PCI_Configuration_Space.png
 en/docs/posts/2023/pkos-21/pcilookup.png
 es/javascripts/mathjax.js
+en/javascripts/mathjax.js
