Try different deploy job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,8 @@ jobs:
           python-version: 3.x
       - run: pip install -r requirements.txt
       - run: ./render.bash
-      - name: Init new repo in dist folder and commit generated files
-        run: |
-          cd build
-          git init
-          git checkout -b gh-pages
-          git add --all
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git commit -m 'deploy'
-          git remote add origin git@github.com:pagekey/blog
-          git push origin gh-pages --force
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
