--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@fontsource-variable/inter": "^5.0.17",
     "astro": "^4.5.12",
     "astro-icon": "^1.1.0",
+    "astro-pagefind": "^1.5.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
-    "typescript-esbuild": "^0.4.9",
-    "unpic": "^3.18.0",
+    "pagefind": "^1.1.0",
     "rehype-katex": "^7.0.0",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "typescript-esbuild": "^0.4.9",
+    "unpic": "^3.18.0"
   },
   "devDependencies": {
     "@astrojs/mdx": "^2.2.2",
