Add mermaid support to blog

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "astro-pagefind": "^1.5.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "mermaid": "^10.9.0",
     "pagefind": "^1.1.0",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
@@ -38,6 +39,7 @@
     "@tailwindcss/typography": "^0.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
+    "@types/mermaid": "^9.2.0",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "astro-compress": "2.2.20",
