--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
+    "postbuild": "pagefind --source dist",
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier -w .",
